# openapi-clients

./: .gitignore  Makefile  README.md  build.gradle  jitpack.yml  kubb.config.ts  openapi.json  package.json  patch.mjs  settings.gradle  settings.gradle.kts  test-clients.sh
rust/assets-api/: Cargo.toml  README.md
rust/assets-api/.openapi-generator/: FILES
rust/assets-api/docs/: AbilityDescriptionV2.md  AbilityTooltipDetailsInfoSectionPropertyBlockV2.md  AbilityTooltipDetailsInfoSectionV2.md  AbilityTooltipDetailsInfoSectionV2Input.md  AbilityTooltipDetailsInfoSectionV2Output.md  AbilityTooltipDetailsV2.md  AbilityTooltipDetailsV2Input.md  AbilityTooltipDetailsV2Output.md  AbilityTypeV2.md  AbilityV2.md  AbilityV2DependentAbilitiesValue.md  AbilityV2Input.md  AbilityV2Output.md  AbilityV2TooltipDetailsInfoSectionPropertyBlockProperty.md  AbilityVideosV2.md  AccoladeV2.md  AccoladesApi.md  AimingShotSpreadPenalty.md  Bonus.md  BuildTagV2.md  BuildTagV2Input.md  BuildTagV2Output.md  BulletResistModifier.md  Color.md  ColorV1.md  DamageFlashV2.md  DeadlockAssetsApiRoutesRawValidClientVersions.md  DeadlockAssetsApiRoutesV1ValidClientVersions.md  DeadlockAssetsApiRoutesV2ValidClientVersions.md  DeadlockAssetsApiRoutesValidClientVersions.md  DefaultApi.md  DraftBucket.md  EmpoweredModifierLevel.md  ExpirationDuration.md  FlashDataV2.md  GameMode.md  GenericDataV2.md  GetItemsV2ItemsGet200ResponseInner.md  GlitchSettingsV2.md  GlowColorEnemy.md  (+196 more)
rust/assets-api/src/apis/: accolades_api.rs  configuration.rs  default_api.rs  heroes_api.rs  items_api.rs  misc_entities_api.rs  mod.rs  npc_units_api.rs  raw_api.rs
rust/assets-api/src/models/: bonus.rs  (+237 more)
(+11594 files in other folders)
